feat: query sorting in mongodb
