# package/src/swagger_server/controllers/student_db_API_functions.py
@@ -4,7 +4,7 @@ from .creation_functions import _component_weighting_equal_one, _create
 from .getter_functions import (  # _get_course_marks_by_lecturer,
     _get_asset_by_id, _get_assets_by_key, _get_assets_by_type, _get_children,
     _get_marks_by_student)
-from .querying_functions import _get_top_x, _get_top_x_percent, _query_bulk
+from .querying_functions import _get_top_x, _get_top_x_percent, _query_bulk, _query_bulk_new
 
 # from .update_functions import (_append_children, _course_add_requisite,
 #                                _course_average_update,
@@ -214,6 +214,11 @@ def degree_get_courses(id, meta_flag):
 @requires_scope('admin', 'lecturer', 'recruiter')
 def query_bulk(body):
     return _query_bulk(body.get('query_list'))
+
+@requires_auth
+@requires_scope('admin', 'lecturer', 'recruiter')
+def query_bulk_new(body):
+    return _query_bulk_new(body.get('query_list'))
 
 @requires_auth
 @requires_scope('admin', 'lecturer', 'recruiter')
